--- a/footer.html
+++ b/footer.html
@@ -1,17 +1,54 @@
- <!-- midsvg -->
- <!-- <div class="midsvg">
-
-   
-   
-
- </div>  -->
-
- <!-- <img src="/images/logo/footer.svg" alt=""> -->
-<!-- end of mid svg -->
 
 
-<footer class="midsvg">
+
+<svg width="" viewBox="0 0 1868 436" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <g clip-path="url(#clip0_66_86)">
+  <g filter="url(#filter0_d_66_86)">
+  <path d="M1862.01 314.154C1843.4 322.968 1824.7 331.438 1805.56 338.94C1713.55 375.007 1618.28 397.784 1520.17 409.044C1466.99 415.148 1413.63 417.504 1360.14 415.993C1324.56 414.987 1289.11 412.099 1253.74 407.916C1225 404.518 1196.52 399.691 1168.23 393.891C1086.63 377.159 1007.8 351.801 932.063 316.969C857.958 282.889 787.451 242.174 717.2 200.972C656.988 165.659 596.957 130.024 534.537 98.6513C482.292 72.394 428.652 49.5322 372.493 32.9737C336.785 22.4455 300.448 14.587 263.447 10.3122C182.945 1.01112 103.573 7.55592 25.2865 28.1494C-3.75396 35.7894 -32.2414 45.1094 -60.3227 55.7361C-64.5398 57.3321 -66.6156 59.3014 -67.3625 64.0326C-104.05 296.561 -140.863 529.07 -177.877 761.548C-178.864 767.744 -177.052 768.942 -171.536 769.816C460.63 869.82 1092.78 969.942 1724.91 1070.19C1730.44 1071.06 1732.53 1070.43 1733.54 1064.29C1740.63 1020.97 1748.16 977.734 1755.61 934.481C1766.44 871.592 1777.32 808.712 1788.19 745.828C1799.13 682.503 1810.07 619.179 1821.01 555.854C1831.91 492.75 1842.86 429.655 1853.68 366.536C1856.63 349.336 1859.18 332.069 1862.01 314.154Z" fill="#DFAD0C"/>
+  </g>
+  <rect x="-1.13501" y="427.472" width="1960" height="539.953" fill="#192838"/>
+  <g filter="url(#filter1_d_66_86)">
+  <path d="M1958.93 238.451C1941.76 249.816 1924.45 260.864 1906.56 271.042C1820.53 319.977 1729.15 356.567 1633.13 382.463C1581.08 396.501 1528.25 406.944 1474.69 413.671C1439.06 418.144 1403.26 420.779 1367.34 422.151C1338.16 423.266 1309.01 422.959 1279.88 421.685C1195.9 418.006 1113.31 405.566 1032.3 383.499C953.046 361.909 876.33 333.356 799.791 304.294C734.19 279.386 668.718 254.139 601.538 233.376C545.31 216 488.226 202.118 429.627 194.712C392.368 190.003 354.902 187.971 317.341 189.503C235.62 192.836 157.528 211.308 82.735 243.19C54.9909 255.017 28.0634 268.383 1.74696 282.95C-2.20508 285.137 -3.96352 287.358 -3.96106 292.044C-3.81961 522.355 -3.80729 752.666 -3.99999 982.979C-4.00541 989.117 -2.00943 989.997 3.62663 989.997C649.624 989.88 1295.62 989.88 1941.62 990C1947.27 990 1949.26 989.068 1949.29 982.979C1949.52 940.04 1950.2 897.104 1950.8 854.168C1951.67 791.739 1952.58 729.312 1953.49 666.884C1954.39 604.017 1955.3 541.151 1956.21 478.284C1957.12 415.637 1958.07 352.992 1958.89 290.343C1959.11 273.272 1958.93 256.196 1958.93 238.451Z" fill="#192838"/>
+  <path d="M1958.93 238.451C1941.76 249.816 1924.45 260.864 1906.56 271.042C1820.53 319.977 1729.15 356.567 1633.13 382.463C1581.08 396.501 1528.25 406.944 1474.69 413.671C1439.06 418.144 1403.26 420.779 1367.34 422.151C1338.16 423.266 1309.01 422.959 1279.88 421.685C1195.9 418.006 1113.31 405.566 1032.3 383.499C953.046 361.909 876.33 333.356 799.791 304.294C734.19 279.386 668.718 254.139 601.538 233.376C545.31 216 488.226 202.118 429.627 194.712C392.368 190.003 354.902 187.971 317.341 189.503C235.62 192.836 157.528 211.308 82.735 243.19C54.9909 255.017 28.0634 268.383 1.74696 282.95C-2.20508 285.137 -3.96352 287.358 -3.96106 292.044C-3.81961 522.355 -3.80729 752.666 -3.99999 982.979C-4.00541 989.117 -2.00943 989.997 3.62663 989.997C649.624 989.88 1295.62 989.88 1941.62 990C1947.27 990 1949.26 989.068 1949.29 982.979C1949.52 940.04 1950.2 897.104 1950.8 854.168C1951.67 791.739 1952.58 729.312 1953.49 666.884C1954.39 604.017 1955.3 541.151 1956.21 478.284C1957.12 415.637 1958.07 352.992 1958.89 290.343C1959.11 273.272 1958.93 256.196 1958.93 238.451Z" stroke="#DFAD0C" stroke-width="2"/>
+  </g>
+  </g>
+  <defs>
+  <filter id="filter0_d_66_86" x="-181.133" y="6.17099" width="2046.15" height="1070.33" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+  <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+  <feOffset dy="3"/>
+  <feGaussianBlur stdDeviation="1.5"/>
+  <feComposite in2="hardAlpha" operator="out"/>
+  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.160784 0"/>
+  <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_66_86"/>
+  <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_66_86" result="shape"/>
+  </filter>
+  <filter id="filter1_d_66_86" x="-8" y="188" width="1971" height="809" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+  <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+  <feOffset dy="3"/>
+  <feGaussianBlur stdDeviation="1.5"/>
+  <feComposite in2="hardAlpha" operator="out"/>
+  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.160784 0"/>
+  <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_66_86"/>
+  <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_66_86" result="shape"/>
+  </filter>
+  <clipPath id="clip0_66_86">
+  <rect width="1868" height="436" fill="white"/>
+  </clipPath>
+  </defs>
+  </svg>
+  
+
+
+
+
+
+<footer class="footerback">
+ 
+
  <div class="footer-left">
+  <div class="footer-column">
    <h3>Our Programs</h3>
    <ul>
      <li>Corporate Wellness Program</li>
@@ -20,7 +57,23 @@
      <li>Individual Plans</li>
      <li>Clubs</li>
    </ul>
+   
  </div>
+ <!-- <div class="footer-column"> -->
+ 
+  <div class="bottomlogo"><div class="footer-logo"  >
+    <img src="/images/logo/bottomlogo.svg" alt="Logo"  style="background-color: #fefefe;
+    border-radius: 50%;
+  ">
+  </div>
+  <div class="footer-address">
+    116 Krishna Arcade, 4th Floor, 11th & 12th Cross, Margosa Rd,<br>
+    Malleshwaram, Bengaluru, Karnataka 560003
+  <!-- </div> -->
+ </div></div>
+ 
+
+</div>
  <div class="footer-right">
    <div class="footer-column">
      <h3>About Us</h3>
@@ -29,28 +82,29 @@
        <li>The Team</li>
      </ul>
    </div>
-   <div class="footer-column">
+   <div class="footer-column"  id="FaQS">
      <h3>FAQs</h3>
      <ul>
        <li>Contact Us</li>
        <li>Terms and Conditions</li>
        <li>Privacy Policy</li>
-       <li>Shipping and Returns</li>
+       <!-- <li>Shipping and Returns</li> -->
      </ul>
    </div>
    <div class="footer-column">
      <h3>Follow Us On</h3>
-     <div class="social-icons">
-       <a href="#"><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a>
-       <a href="#"><i class="fa-brands fa-square-facebook fa-xl" style="color: #ffffff;"></i></a>
-       <a href="#"><i class="fa-brands fa-youtube fa-xl" style="color: #ffffff;"></i></a>
-       <a href="#"><i class="fa-brands fa-twitter fa-xl" style="color: #ffffff;"></i></a>
-       <a href="#"><i class="fa-brands fa-linkedin-in fa-xl" style="color: #ffffff;"></i></a>
+     <div class="social-icons store-icons">
+       <a href="#"><i class="fa-brands fa-instagram fa-lg" style="color: #ffffff;"></i></a>
+       <a href="#"><i class="fa-brands fa-facebook fa-lg" style="color: #ffffff;"></i></a>
+       <a href="#"><i class="fa-brands fa-youtube fa-lg" style="color: #ffffff;"></i></a>
+       <a href="#"><i class="fa-brands fa-twitter fa-lg" style="color: #ffffff;"></i></a>
+       <a href="#"><i class="fa-brands fa-linkedin-in fa-lg" style="color: #ffffff;"></i></a>
      </div>
-     <div class="store-icons">
-       <a href="#"><img src="playstore.png" alt="Google Play Store"></a>
-       <a href="#"><img src="appstore.png" alt="Apple App Store"></a>
+     <div class="store-icons social-icons">
+       <a href="#"><img src="/images/icons/playstore.svg" height="40" alt="Google Play Store"></a>
+       <a href="#"><img src="/images/icons/app-store.svg" height="40" alt="Apple App Store"></a>
      </div>
    </div>
+   
  </div>
 </footer>
