--- a/about.html
+++ b/about.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+    <style>
+      .custom-navcolor {
+    background-color: white !important;
+    /* background: white; */
+  }
+    </style>
 </head>
 <body class="aboutBackround">
   <div class="con" id="headerNav"></div>
@@ -31,7 +38,7 @@
   </div>
 
   <!-- why chose us section  -->
-  <section id="why-choose-us" style="margin-top: 4rem;">
+  <section id="why-choose-us" style="margin-top: 4rem; margin-bottom: 4rem;">
     <div class="container">
       <div class="row reveal fade-left">
         <div class="col-md-4">
@@ -246,10 +253,10 @@
   
   <div id="footer"></div>
 
-   
+<!--    
 <script type="text/javascript" src="/js/skrollr.js  "></script>
 <script type="text/javascript">
-var s = skrollr.init();
+var s = skrollr.init(); -->
 </script>
 
 </body>
