--- a/navbar.html
+++ b/navbar.html
@@ -12,16 +12,21 @@
     
     
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="border: none; border: none; outline: none;
+          box-shadow: none;">
+          <div id="nav-icon1">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto justify-content-end">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About Us</a>
+          <a class="nav-link" href="about.html">About us</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuProgram" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -41,14 +46,14 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuServices">
             <a class="dropdown-item" href="prohealth.html">Pro Health</a>
-            <a class="dropdown-item" href="fitnes.html">Fitness</a>
-            <a class="dropdown-item" href="advancecare.html">Advance Care</a>
-            <a class="dropdown-item" href="mindtraining.html">Mind Training</a>
-            <a class="dropdown-item" href="memberships.html">Package <i class="fa-sharp fa-solid fa-crown" style="color: #ffd43b;"></i></a>
+            <a class="dropdown-item" href="fitness.html">Fitness</a>
+            <a class="dropdown-item" href="advancecare.html">Advanced care</a>
+            <a class="dropdown-item" href="mindtraining.html">Mind training</a>
+            <!-- <a class="dropdown-item" href="memberships.html">Package <i class="fa-sharp fa-solid fa-crown" style="color: #ffd43b;"></i></a> -->
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link glow-button" href="enquiry.html">Book Free Consultation</a>
+        <li class="nav-item hideNumber">
+          <a class="nav-link " href="enquiry-form.html" ><i class="fa-sharp fa-solid fa-phone fa-shakeee" style="color: #132f4e;"></i> 8431848949 </a>
         </li>
       </ul>
    
