--- a/enquiry-form.html
+++ b/enquiry-form.html
@@ -88,13 +88,13 @@
           </div>
         </li>
         <li class="nav-item hideNumber">
-          <a class="nav-link " href="enquiry-form.html" ><i class="fa-sharp fa-solid fa-phone fa-shakeee" style="color: #132f4e;"></i> 8431848949 </a>
+          <a class="nav-link" href="tel:+918431848949" ><i class="fa-sharp fa-solid fa-phone fa-shakeee" style="color: #132f4e;"></i> 8431848949 </a>
         </li>
       </ul>
    
     </div>
   </nav>
-  <section class="enquiry1" style="    margin-top: 6rem;">
+  <section class="enquiry1" style="">
     <div class="enquiry-form1">
           
         <div class="yellow-box1"><img src="/images/partners/enquiry-form.svg"></div>
