--- a/mindtraining.html
+++ b/mindtraining.html
@@ -73,7 +73,7 @@
           </div>
         </li>
         <li class="nav-item hideNumber">
-          <a class="nav-link " href="enquiry-form.html" ><i class="fa-sharp fa-solid fa-phone fa-shakeee" style="color: #132f4e;"></i> 8431848949 </a>
+          <a class="nav-link" href="tel:+918431848949" ><i class="fa-sharp fa-solid fa-phone fa-shakeee" style="color: #132f4e;"></i> 8431848949 </a>
         </li>
       </ul>
    
@@ -90,7 +90,7 @@
   
 	  <div class="fitness-container">
       <div class="fitness_card">
-        <img class="fitness_card-img" src="/images/mindtraining/meditation.svg" alt="Team Member 1">
+        <img class="fitness_card-img" src="/images/mindtraining/meditation.jpg" alt="Team Member 1">
         <div class="fitness_card-content">
           <p class="fitness_card-description">Meditation
             </p>
@@ -118,7 +118,7 @@
       </div>
     </div>
     <div class="fitness_card">
-      <img class="fitness_card-img" src="/images/mindtraining/lifestyle.svg" alt="Team Member 1">
+      <img class="fitness_card-img" src="/images/mindtraining/lifestyle.jpg" alt="Team Member 1">
       <div class="fitness_card-content">
         <p class="fitness_card-description">Sedentary
           lifestyle
@@ -136,7 +136,7 @@
   </div>
   <div class="fitness-container">
     <div class="fitness_card">
-      <img class="fitness_card-img" src="/images/mindtraining/managment.svg" alt="Team Member 1">
+      <img class="fitness_card-img" src="/images/mindtraining/managment.jpg" alt="Team Member 1">
       <div class="fitness_card-content">
         <p class="fitness_card-description">Stress management   </p>
       </div>
@@ -152,7 +152,7 @@
     </div>
    
     <div class="fitness_card">
-        <img class="fitness_card-img" src="/images/mindtraining/musix.svg" alt="Team Member 1">
+        <img class="fitness_card-img" src="/images/mindtraining/musix.jpg" alt="Team Member 1">
         <div class="fitness_card-content">
           <p class="fitness_card-description">Music meditation</p>
         </div>
