--- a/navbar.html
+++ b/navbar.html
@@ -53,7 +53,7 @@
           </div>
         </li>
         <li class="nav-item hideNumber">
-          <a class="nav-link " href="enquiry-form.html" ><i class="fa-sharp fa-solid fa-phone fa-shakeee" style="color: #132f4e;"></i> 8431848949 </a>
+          <a class="nav-link" href="tel:+918431848949" ><i class="fa-sharp fa-solid fa-phone fa-shakeee" style="color: #132f4e;"></i> 8431848949 </a>
         </li>
       </ul>
    
