--- a/advancecare.html
+++ b/advancecare.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"> -->
-  <title>Udhaivi</title>
+  <title>Just In Time</title>
+  <link rel="icon" type="image/png" href="/images/logo/jit-bottom-white-logo.png">
   <link rel="stylesheet"  href="css/style.css">
     <link rel="stylesheet"  href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
@@ -16,6 +17,15 @@
 	 
 	  </style>
 </head>
+ <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-XY7GN5SVCZ"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+ 
+   gtag('config', 'G-XY7GN5SVCZ');
+ </script>
 <body class="aboutBackround">
   <div class="con" id="headerNav"></div>
   
@@ -26,7 +36,7 @@
     <div class="prohealth_header" ><h2 class="prohealth-heading undetline-content-services" style="color: #192838;">Advanced care</h2>
 	  <div class="fitness-container">
     <div class="fitness_card">
-      <img class="fitness_card-img" src="/images/advancedcare/check.svg" alt="Team Member 1">
+      <img class="fitness_card-img" src="/images/advancedcare/check.jpg" alt="Team Member 1">
       <div class="fitness_card-content">
         <p class="fitness_card-description">Master health check-up</p>
       </div>
@@ -39,7 +49,7 @@
       </div>
     </div>
     <div class="fitness_card">
-      <img class="fitness_card-img" src="/images/advancedcare/whealth.svg" alt="Team Member 1">
+      <img class="fitness_card-img" src="/images/advancedcare/whealth.jpg" alt="Team Member 1">
       <div class="fitness_card-content">
         <p class="fitness_card-description">Women’s health
         </p>
@@ -53,7 +63,7 @@
       </div>
     </div>
     <div class="fitness_card">
-      <img class="fitness_card-img" src="/images/advancedcare/alchohol.svg" alt="Team Member 1">
+      <img class="fitness_card-img" src="/images/advancedcare/alchohol.jpg" alt="Team Member 1">
       <div class="fitness_card-content">
         <p class="fitness_card-description">Alcohol risk assessment
         </p>
@@ -70,7 +80,7 @@
   </div>
   <div class="fitness-container">
     <div class="fitness_card">
-      <img class="fitness_card-img" src="/images/advancedcare/otoscope.svg" alt="Team Member 1">
+      <img class="fitness_card-img" src="/images/advancedcare/otoscope.jpg" alt="Team Member 1">
       <div class="fitness_card-content">
         <p class="fitness_card-description">Otoscope
         </p>
@@ -84,7 +94,7 @@
       </div>
     </div>
     <div class="fitness_card">
-      <img class="fitness_card-img" src="/images/advancedcare/rapidvision.svg" alt="Team Member 1">
+      <img class="fitness_card-img" src="/images/advancedcare/rapidvision.jpg" alt="Team Member 1">
       <div class="fitness_card-content">
         <p class="fitness_card-description">Rapid vision
         </p>
@@ -98,7 +108,7 @@
       </div>
     </div>
     <div class="fitness_card">
-        <img class="fitness_card-img" src="/images/advancedcare/brainsimulation.svg" alt="Team Member 1">
+        <img class="fitness_card-img" src="/images/advancedcare/brainsimulation.jpg" alt="Team Member 1">
         <div class="fitness_card-content">
           <p class="fitness_card-description">Brain simulation
         </p>
