--- a/enquiry-form.html
+++ b/enquiry-form.html
@@ -15,7 +15,7 @@
 
     <style>
       .navbar {
-    background-color: #ffffff !important;
+    /* background-color: #ffffff !important; */
     /* background: white; */
   }
   label.required::after {
@@ -160,8 +160,8 @@ var s = skrollr.init();
     $('#nav-icon1').removeClass('open');
   });
 // for loading navbar and foorter pages
-    $("#headerNav").load("navbar.html"); 
-    // $("#footer").load("footer.html"); 
+$("#headerNav").load("navbar.html"); 
+    $("#footer").load("footer.html"); 
   
     // $(".navbar-nav .nav-link").click(function() {
     //   $(".navbar-collapse").collapse('hide');
