--- a/about.html
+++ b/about.html
@@ -35,7 +35,8 @@
       <h1 class="hero-heading undetline-content-about">About us</h1>
       <!-- <h2 class="hero-subheading">Welcome to Udhaivi Healthcare PVT.LTD.</h2> -->
       <p class="hero-paragraph">
-        Committed to holistic healthcare and wellness, JIT is a beacon of honesty and integrity. Our mission extends beyond individuals, reaching out to communities, employees, and diverse audiences of all ages and genders. Join us on our journey towards a healthier future. With our expertise and dedication, we aim to meet the diverse healthcare needs of our customers and contribute to their overall well-being. We believe that true wellness encompasses not only physical health but also mental, and emotional well-being. Our company was founded to improve the lives of individuals through holistic health practices.
+        Committed to holistic healthcare and wellness, JIT is a beacon of honesty and integrity. Our mission extends beyond individuals, reaching out to communities, employees, and diverse audiences of all ages and genders. Join us on our journey towards a healthier future. With our expertise and dedication, we aim to meet the diverse healthcare needs of our customers and contribute to their overall well-being.
+        
       </p>
     </div>
     <div class="about-hero-image">
@@ -49,7 +50,7 @@
     participated in advancing healthcare. JIT is unique not only in what we do, who we serve, and why we do it but also in 
     how we do it. Ever since we began our journey, we have remained committed to fulfilling our purpose of offering affordable
      and accessible,  high-quality healthcare services right at the doorsteps of the people we serve.</p>
-     <p>We believe that true wellness encompasses not only physical health but also mental, and emotional
+     <p class="about-paragraph-style container">We believe that true wellness encompasses not only physical health but also mental, and emotional
       well-being. Our company was founded to improve the lives of individuals through holistic health
       practices.</p>
   <section id="why-choose-us" class="space-between-section" style="">
@@ -74,7 +75,7 @@
             <!-- <div class="card-number">02</div> -->
             <div class="card-body">
               <h3 class="card-heading">Our mission</h3>
-              <p class="card-paragraph">Our mission is to empower organizations, communities, and clubs to build a foundation of well-being by offering comprehensive wellness initiatives tailored to their specific needs. We provide evidence-based strategies, tools, and resources that support individuals in making healthy choices and adopting sustainable lifestyle habits. 
+              <p class="card-paragraph">Our mission is to empower organizations, communities, and clubs to build a foundation of well-being by offering comprehensive wellness initiatives tailored to their specific needs. 
               </p>
             </div>
           </div>
