--- a/clubs.html
+++ b/clubs.html
@@ -58,7 +58,7 @@
   
 
 <section class="wellnes-horo-section space-between-section"  style="" >
-  <div class="corporate-wellness-section">
+  <div class="club-wellness-section">
     <div class="left-side">
       <h2 class="undetline-content">Clubs</h2>
       
