--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </div>
         </section>
         <div class="bmi-calculator" id="bmi-calculator">
-            <h2 >BMI Calculator</h2>
+          <!-- <button class="close-btn" onclick="closeCalculator()">X</button>  -->
+          <i class="close-btn fa-solid fa-circle-xmark fa-lg " style="color:rgb(0 38 78) ;" id="cross-button1"></i>
+            <h2 >BMI Calculator</h2> 
             <form name="submit-to-google-sheet">
               <div class="input-group">
                 <label for="bmiUsername"><span class="error">*</span>Name:</label>
